Created basic layout

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,35 @@
 h1{
-    font-size: 5rem;
+    font-size: 3rem;
+    align-items: center;
+    background-color: rgb(73, 72, 72);
+    color: white;
     text-align: center;
-    color: navy;
+    font-family: 'Playfair Display';
+    font-weight: 500;
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+
+.jumbotron{
+    position: relative;
+    margin-left: 30%;
+    margin-right: 5%;
+    margin-top: 2%;
+    height:20%;
+}
+
+.container{
+    margin-right: 8%;
+    margin-top: 2%;
+}
+
+#list{
+    margin-top: 2%;
+}
+
+#search{
+    width: 500px;
+    align-self: flex-start;
+    margin-left: 2%;
+    margin-top:0%
 }
