--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,32 @@
 body {
     font-family: 'Gilda Display';
-    font-size: 2rem;
 }
 
 .jumbotron{
     border-radius: 0%;
-    margin-left:26%;
-    margin-right:25%;
+    margin-left:10%;
+    width: 80%;
     margin-top:1%;
     border-style: solid;
     border-color: rgb(108,117,125);
+    position: absolute;
 }
 
 h1 {
     color: white;
-    background-color: rgb(108,117,125);
+    background-color: rgb(132, 141, 149);
     font-family: 'Gilda Display';
     font-size: 3rem;
     text-align: center;
+    margin-top: 2%;
+}
+
+h2 {
+    font-family: 'Gilda Display';
+    font-size: 2rem;
     margin-top: 0.75%;
     padding: 1%;
+    font-family: 'Calibri';
 }
 
 #lab {
@@ -33,13 +40,53 @@ p {
     color: black;
 }
 
-#bot {
+#bot {  
     color: black;
     margin-top:2%;
+    font-size: 1.5rem;
 }
 
 #clock{
-    margin-left:36%;
+    margin-left:33%;
     margin-right:25%;
     margin-top: 0.5%;
+    padding: 1%;
+    font-size: 2rem;
+    background-color: rgb(132, 141, 149);
+    color: white;
+    border-style: solid;
+}
+#we_img{
+    background: rgb(170, 169, 169);
+}
+
+#city-name{
+    float: left;
+}
+
+#uv2 {
+    color : white;
+    width : auto;
+}
+
+.serchitem {
+   width : 175px;
+   background: rgb(131, 131, 131);
+   color: white;
+   font-size: 20px;
+   font-weight: bold;
+   font-family: 'Calibri';
+   border-radius: 8%;
+   text-align: center;
+}
+
+.we-tile{
+    background-color: rgb(0, 123, 255);
+    color: white;
+    width: 190px;
+    float: left;
+    margin: 10px;
+    padding: 30px;
+    font-family: 'Calibri';
+    border-radius: 10%;
 }
